--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <!-- <img src="./assets/img/22116270_1114.jpg" alt="logo" /> -->
+        <img src="./assets/img/logo.svg" alt="logo" />
       </div>
       <nav>
         <ul>
