--- a/index.html
+++ b/index.html
@@ -23,28 +23,87 @@
       <button class="cta-button">Call to Action</button>
     </header>
 
-    <section class="s-hero">
+    <section class="s-hero sh-1">
       <div class="grid-container">
         <div class="box-text">
           <h2>Hero Section 1</h2>
           <p id="text">This is the first hero section.</p>
         </div>
-        <div class="box-content-img-home">
-          <!-- <img src="image1.jpg" alt="Image 1" /> -->
-        </div>
+        <div class="box-content-img-home"></div>
       </div>
     </section>
 
-    <section class="s-hero">
+    <section class="s-hero sh-2">
       <div class="grid-container">
-        <div class="box-content-img-2">
-          <!-- <img src="image1.jpg" alt="Image 1" /> -->
-        </div>
+        <div class="box-content-img-2"></div>
         <div class="box-text">
           <h2>Hero Section 2</h2>
           <p>This is the second hero section.</p>
         </div>
       </div>
     </section>
+
+    <section class="s-hero sh-3">
+      <div class="grid-container">
+        <div class="box-content-img-3"></div>
+        <div class="box-content-img-4"></div>
+        <div class="box-content-img-5"></div>
+        <div class="box-content-img-6"></div>
+      </div>
+    </section>
+
+    <section class="s-hero sh-4">
+      <div class="grid-container"></div>
+    </section>
+
+    <footer>
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="./assets/img/logo.svg" alt="logo" />
+        </div>
+        <div class="footer-social">
+          <a href="#"
+            ><img src="./assets/img/icons8-x.svg" alt="X-Twitter"
+          /></a>
+          <a href="#"
+            ><img src="./assets/img/icons8-linkedin.svg" alt="LinkedIn"
+          /></a>
+          <a href="#"
+            ><img src="./assets/img/icons8-instagram.svg" alt="Instagram"
+          /></a>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact Us</h3>
+          <p>
+            Email:
+            <a href="mailto:contact@example.com">feryamaha@hotmail.com</a>
+          </p>
+          <p>Telefone: <a href="tel:+1234567890">+55 14 99601-0696</a></p>
+          <p>Romeu Ceroni n468, Janio Quadros Marilia-SP</p>
+        </div>
+        <div class="footer-credits">
+          <h3>Credits</h3>
+          <p>
+            Design desenvolvido por minha criatividade e este projeto é um dos
+            exercícios de prática de HTML, CSS, SASS e JavaScript.
+          </p>
+        </div>
+        <div class="footer-newsletter">
+          <h3>Me envie uma mensagem</h3>
+          <form action="#" method="post">
+            <input
+              type="email"
+              name="email"
+              placeholder="Enter your email"
+              required
+            />
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+        <div class="footer-copyright">
+          <p>&copy; 2023 Fernando.front-End All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
