--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
         <img src="./assets/img/logo.svg" alt="logo" />
       </div>
       <nav>
-        <ul>
+        <ul class="menu" id="menu-toggle">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
-      <button class="cta-button">Call to Action</button>
+      <!-- <button id="Ct-button" class="cta-button">Call to Action</button> -->
+      <img
+        src="./assets/img/menu-square.svg"
+        alt="menu-square"
+        id="menu-square"
+      />
     </header>
 
     <section class="s-hero sh-1">
@@ -107,3 +112,5 @@
     </footer>
   </body>
 </html>
+
+<script src="./assets/script/main.js"></script>
