--- a/index.html
+++ b/index.html
@@ -106,7 +106,31 @@
     </section>
 
     <section class="s-hero sh-4">
-      <div class="grid-container"></div>
+      <div class="grid-container">
+        <div id="c1" class="circle"></div>
+        <div id="c2" class="circle"></div>
+        <div id="c3" class="circle"></div>
+        <div id="c4" class="circle"></div>
+        <div id="c5" class="circle"></div>
+        <div id="c6" class="circle"></div>
+        <div id="c7" class="circle"></div>
+        <div id="c8" class="circle"></div>
+        <div id="c9" class="circle"></div>
+        <div id="c10" class="circle"></div>
+
+        <div class="grid">
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+        </div>
+      </div>
     </section>
 
     <footer>
