--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </div>
       <nav>
         <ul class="menu" id="menu-toggle">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">LOREN</a></li>
+          <li><a href="#">IPSUN</a></li>
+          <li><a href="#">COLORS</a></li>
+          <li><a href="#">MINUS</a></li>
         </ul>
       </nav>
       <!-- <button id="Ct-button" class="cta-button">Call to Action</button> -->
