--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       </div>
       <nav>
         <ul class="menu" id="menu-toggle">
-          <li><a href="#">LOREN</a></li>
-          <li><a href="#">IPSUN</a></li>
-          <li><a href="#">COLORS</a></li>
-          <li><a href="#">MINUS</a></li>
+          <li><a href="#">c...</a></li>
+          <li><a href="#">O...</a></li>
+          <li><a href="#">L...</a></li>
+          <li><a href="#">O...</a></li>
+          <li><a href="#">R...</a></li>
+          <li><a href="#">S...</a></li>
         </ul>
       </nav>
       <!-- <button id="Ct-button" class="cta-button">Call to Action</button> -->
