--- a/index.html
+++ b/index.html
@@ -3,8 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="ColorPulse: Festa de cores e animações com esferas geométricas em Sass e JS. Meu portfólio de Engenharia de Software!"
+    />
+    <meta
+      name="keywords"
+      content="ColorPulse, animações, cores, geometria, Sass, JavaScript, portfólio, Engenharia de Software, GitHub Pages"
+    />
+    <meta name="author" content="[Seu Nome]" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph para redes sociais -->
+    <meta property="og:title" content="ColorPulse" />
+    <meta
+      property="og:description"
+      content="Festa de cores e animações com esferas geométricas em Sass e JS. Veja meu portfólio no GitHub Pages!"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://seuusuario.github.io/colorpulse/"
+    />
+    <meta
+      property="og:image"
+      content="https://seuusuario.github.io/colorpulse/assets/img/screenshot.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://seuusuario.github.io/colorpulse/" />
+
     <link rel="icon" href="./assets/img/favicon.svg" type="image/x-icon" />
-    <title>SASS COLOR</title>
+    <title>ColorPulse</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/sass/main.css" />
   </head>
@@ -15,11 +45,11 @@
       </div>
       <nav>
         <ul class="menu" id="menu-toggle">
-          <li><a href="#">c...</a></li>
-          <li><a href="#">O...</a></li>
-          <li><a href="#">L...</a></li>
-          <li><a href="#">O...</a></li>
-          <li><a href="#">R...</a></li>
+          <li><a href="#">P - C</a></li>
+          <li><a href="#">U - O</a></li>
+          <li><a href="#">L - L</a></li>
+          <li><a href="#">S - O</a></li>
+          <li><a href="#">E - R</a></li>
         </ul>
       </nav>
       <!-- <button id="Ct-button" class="cta-button">Call to Action</button> -->
@@ -170,6 +200,10 @@
         </div>
       </div>
     </footer>
+    <audio id="plockSound" preload="auto">
+      <source src="./assets/sounds/plock.m4a" type="audio/mp4" />
+      Seu navegador não suporta o elemento de áudio.
+    </audio>
   </body>
 </html>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
